--- a/package.json
+++ b/package.json
@@ -11,26 +11,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.0",
-    "@angular/common": "~8.1.0",
-    "@angular/compiler": "~8.1.0",
-    "@angular/core": "~8.1.0",
-    "@angular/forms": "~8.1.0",
-    "@angular/platform-browser": "~8.1.0",
-    "@angular/platform-browser-dynamic": "~8.1.0",
-    "@angular/router": "~8.1.0",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "@angular/animations": "~8.0.0",
+    "@angular/common": "~8.0.0",
+    "@angular/compiler": "~8.0.0",
+    "@angular/core": "~8.0.0",
+    "@angular/forms": "~8.0.0",
+    "@angular/platform-browser": "~8.0.0",
+    "@angular/platform-browser-dynamic": "~8.0.0",
+    "@angular/platform-server": "~8.0.0",
+    "@angular/pwa": "^0.800.2",
+    "@angular/router": "~8.0.0",
+    "@angular/service-worker": "~8.0.0",
+    "@compodoc/compodoc": "^1.1.8",
+    "@ng-bootstrap/ng-bootstrap": "4.1.0",
+    "@ng-select/ng-select": "^2.13.2",
+    "@ngrx/effects": "~8.0.1",
+    "@ngrx/router-store": "~8.0.1",
+    "@ngrx/store": "~8.0.1",
+    "@nguniversal/express-engine": "^7.1.1",
+    "@nguniversal/module-map-ngfactory-loader": "^7.1.1",
+    "@spartacus/assets": "^1.0.0-RC.0",
+    "@spartacus/core": "^1.0.0-RC.0",
+    "@spartacus/storefront": "^1.0.0-RC.0",
+    "@spartacus/styles": "^1.0.0-RC.0",
+    "@types/googlemaps": "^3.30.13",
+    "bootstrap": "^4.2.1",
+    "core-js": "^2.5.7",
+    "hamburgers": "^1.1.3",
+    "i18next": "^15.0.6",
+    "i18next-xhr-backend": "^2.0.1",
+    "rxjs": "^6.4.0",
+    "ts-loader": "^5.3.2",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.0",
     "@angular/cli": "~8.1.0",
     "@angular/compiler-cli": "~8.1.0",
     "@angular/language-service": "~8.1.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
