--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "i18next-xhr-backend": "^2.0.1",
     "rxjs": "^6.4.0",
     "ts-loader": "^5.3.2",
-    "zone.js": "^0.9.1"
+    "zone.js": "^0.9.1",
+    "lodash": "4.17.15"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.0",
@@ -51,6 +52,7 @@
     "@angular/language-service": "~8.1.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/lodash": "^4.14.136",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
