--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,7 @@
 /node_modules
 
 # profiling files
-chrome-profiler-events.json
-speed-measure-plugin.json
-package-lock.json
+chrome-profiler-events*.json
 
 # IDEs and editors
 /.idea
