--- a/package.json
+++ b/package.json
@@ -5,66 +5,61 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.0",
-    "@angular/common": "~8.0.0",
-    "@angular/compiler": "~8.0.0",
-    "@angular/core": "~8.0.0",
-    "@angular/forms": "~8.0.0",
-    "@angular/platform-browser": "~8.0.0",
-    "@angular/platform-browser-dynamic": "~8.0.0",
-    "@angular/platform-server": "~8.0.0",
-    "@angular/pwa": "^0.800.2",
-    "@angular/router": "~8.0.0",
-    "@angular/service-worker": "~8.0.0",
-    "@compodoc/compodoc": "^1.1.8",
-    "@ng-bootstrap/ng-bootstrap": "4.1.0",
-    "@ng-select/ng-select": "^2.13.2",
-    "@ngrx/effects": "~8.0.1",
-    "@ngrx/router-store": "~8.0.1",
-    "@ngrx/store": "~8.0.1",
-    "@nguniversal/express-engine": "^7.1.1",
-    "@nguniversal/module-map-ngfactory-loader": "^7.1.1",
-    "@spartacus/assets": "^1.0.0-RC.0",
-    "@spartacus/core": "^1.0.0-RC.0",
-    "@spartacus/storefront": "^1.0.0-RC.0",
-    "@spartacus/styles": "^1.0.0-RC.0",
-    "@types/googlemaps": "^3.30.13",
-    "bootstrap": "^4.2.1",
-    "core-js": "^2.5.7",
-    "hamburgers": "^1.1.3",
-    "i18next": "^15.0.6",
-    "i18next-xhr-backend": "^2.0.1",
-    "rxjs": "^6.4.0",
-    "ts-loader": "^5.3.2",
-    "zone.js": "^0.9.1",
-    "lodash": "4.17.15"
+    "@angular/animations": "~12.0.0",
+    "@angular/common": "~12.0.0",
+    "@angular/compiler": "~12.0.0",
+    "@angular/core": "~12.0.0",
+    "@angular/forms": "~12.0.0",
+    "@angular/platform-browser": "~12.0.0",
+    "@angular/platform-browser-dynamic": "~12.0.0",
+    "@angular/router": "~12.0.0",
+    "@angular/service-worker": "^12.0.5",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ng-select/ng-select": "^7.0.1",
+    "@ngrx/effects": "^12.1.0",
+    "@ngrx/router-store": "^12.1.0",
+    "@ngrx/store": "^12.1.0",
+    "@spartacus/asm": "~4.3.1",
+    "@spartacus/assets": "~4.3.1",
+    "@spartacus/cart": "~4.3.1",
+    "@spartacus/checkout": "~4.3.1",
+    "@spartacus/core": "~4.3.1",
+    "@spartacus/order": "~4.3.1",
+    "@spartacus/product": "~4.3.1",
+    "@spartacus/smartedit": "~4.3.1",
+    "@spartacus/storefinder": "~4.3.1",
+    "@spartacus/storefront": "~4.3.1",
+    "@spartacus/styles": "~4.3.1",
+    "@spartacus/tracking": "~4.3.1",
+    "@spartacus/user": "~4.3.1",
+    "angular-oauth2-oidc": "^10.0.1",
+    "bootstrap": "^4.3.1",
+    "i18next": "^20.2.2",
+    "i18next-http-backend": "^1.2.2",
+    "ngx-infinite-scroll": "^8.0.0",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.1.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.0",
-    "@angular/cli": "~8.1.0",
-    "@angular/compiler-cli": "~8.1.0",
-    "@angular/language-service": "~8.1.0",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/lodash": "^4.14.136",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "@angular-devkit/build-angular": "~12.0.0",
+    "@angular-devkit/schematics": "^12.0.5",
+    "@angular/cli": "~12.0.0",
+    "@angular/compiler-cli": "~12.0.0",
+    "@spartacus/schematics": "^4.3.1",
+    "@types/jasmine": "~3.6.0",
+    "@types/node": "^12.11.1",
+    "jasmine-core": "~3.7.0",
+    "karma": "~6.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "typescript": "~4.2.3"
   }
 }
